src/test/deca/context/valid/bge_float_bge_float.deca
// Description :
// 
//      Test syntaxiquement correct de 2.5>=3.5
// 
// Résultats : 
// 
//      N/A
// 
// Historique : 
// 
//      Créé le 09/06/2023 par gl03

{
    boolean y = 2.5>=3.5;
    print(y);
}

