src/test/deca/context/invalid/ineq_int_ineq_string.deca
// Description :
// 
//      Test syntaxiquement correct de 3!="Bonjour"
// 
// Résultats : 
// 
//      N/A
// 
// Historique : 
// 
//      Créé le 09/06/2023 par gl03

{
    boolean y = 3!="Bonjour";
}

